--- a/index.html
+++ b/index.html
@@ -6,11 +6,106 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Donate Today</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital@0;1&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <h1>rony</h1>
+    <section class="lets-help-donation">
+        <div>
+            <h1 class="lets-help">Let's Help Those Who Are <br />More In Need</h1>
+            <p class="paragraph">Your donations can protect children and families against waterborne diseases through
+                the
+                immediate
+                supply
+                of hygiene kits, jerrycans and water purification tablets provide immediate relief on the
+                ground.</p><br>
+            <a class="link-button" target="_blank" href="https://assunnahfoundation.org/donate/flood"> Donate
+                Now</a>
+        </div>
+    </section>
+    <h1 class="title2">Donate Today</h1>
+    <p class="paragraph2">do something for our donate today</p>
+    <div class="donate-today">
+        <div class="one-hundred">
+            <div class="one-hundred-description">
+                <h1>100tk</h1>
+            </div>
+
+        </div>
+        <div class="two-hundred">
+            <div class="two-hundred-description">
+                <h1>200tk</h1>
+            </div>
+
+        </div>
+        <div class="five-hundred">
+            <div class="five-hundred-description">
+                <h1>500tk</h1>
+            </div>
+
+        </div>
+        <div class="one-housand">
+            <div class="one-housand-description">
+                <h1>1000tk</h1>
+            </div>
+
+        </div>
+        <div class="five-housand">
+            <div class="five-housand-description">
+                <h1>5000tk</h1>
+
+            </div>
+
+        </div>
+    </div> <br>
+    <p class="others-amount">Others Amount (Taka)</p>
+    <br>
+    <a class="link-button" target="_blank" href="https://assunnahfoundation.org/donate/flood"> Donate
+        Now</a>
+    <section>
+        <h1 class="title3">Our Donate Plan</h1>
+        <p class="paragraph3">do something for our donate plan</p>
+        <div class="our-donate-plan">
+            <div class="food-family">
+                <div class="food-description">
+                    <img src="icons/food.png" alt="">
+                    <h2>Food for a family</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia, quibusdam?</p>
+                </div>
+            </div>
+            <div class="shelter-family">
+                <div class="shelter-description">
+                    <img src="icons/shelter.png" alt="">
+                    <h2>Shelter for a family</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia, quibusdam?</p>
+                </div>
+            </div>
+            <div class="education-child">
+                <div class="education-description">
+                    <img src="icons/Frame-1.png" alt="">
+                    <h2>Education for a child</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia, quibusdam?</p>
+                </div>
+            </div>
+
+        </div>
+    </section>
+    <section class="title3">
+        <h1>About Us</h1>
+    </section>
+    <h1 class="title3">Get My Updates</h1>
+    <p class="paragraph3">If further any types of query feel free mail me to get updates </p>
+    <div class="gets-update">
+        <div>
+            <input type="Mail" name="" id="">
+        </div>
+        <div>
+            <a class="subscribe-box " target="_blank" href="assunnahfoundationbd@gmail.com"> Subscribe</a>
+        </div>
 </body>
+
 
 </html>
