--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
         </div>
     </section>
     <h1 class="title2">Donate Today</h1>
-    <p class="paragraph2">do something for our donate today</p>
+    <p class="paragraph2">Funded Project Combined with other sources of funding, this project raised enough money to
+        fund the outlined activities</p>
     <div class="donate-today">
         <div class="one-hundred">
             <div class="one-hundred-description">
@@ -63,49 +64,39 @@
     </div> <br>
     <p class="others-amount">Others Amount (Taka)</p>
     <br>
-    <a class="link-button" target="_blank" href="https://assunnahfoundation.org/donate/flood"> Donate
+    <a class="link-button-second" target="_blank" href="https://assunnahfoundation.org/donate/flood"> Donate
         Now</a>
     <section>
         <h1 class="title3">Our Donate Plan</h1>
-        <p class="paragraph3">do something for our donate plan</p>
+        <p class="paragraph3">Our donate plan are designed under three important needs here is below</p>
         <div class="our-donate-plan">
             <div class="food-family">
                 <div class="food-description">
                     <img src="icons/food.png" alt="">
                     <h2>Food for a family</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia, quibusdam?</p>
+                    <p>Food for a family is most vital role to survive in this situation</p>
                 </div>
             </div>
             <div class="shelter-family">
                 <div class="shelter-description">
                     <img src="icons/shelter.png" alt="">
                     <h2>Shelter for a family</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia, quibusdam?</p>
+                    <p>Shelter for a family is most vital role to survive in this situation</p>
                 </div>
             </div>
             <div class="education-child">
                 <div class="education-description">
                     <img src="icons/Frame-1.png" alt="">
                     <h2>Education for a child</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia, quibusdam?</p>
+                    <p>After flood disaster education for a child is mandatory to go ahead</p>
                 </div>
             </div>
 
         </div>
     </section>
-    <section class="title3">
-        <h1>About Us</h1>
-    </section>
-    <h1 class="title3">Get My Updates</h1>
-    <p class="paragraph3">If further any types of query feel free mail me to get updates </p>
-    <div class="gets-update">
-        <div>
-            <input type="Mail" name="" id="">
-        </div>
-        <div>
-            <a class="subscribe-box " target="_blank" href="assunnahfoundationbd@gmail.com"> Subscribe</a>
-        </div>
+    <footer>
+        <p>Be Humble <br><span>I'm gonna do it</span> </p>
+    </footer>
 </body>
-
 
 </html>
