--- a/index.html
+++ b/index.html
@@ -94,9 +94,19 @@
 
         </div>
     </section>
-    <footer>
-        <p>Be Humble <br><span>I'm gonna do it</span> </p>
-    </footer>
+    <section>
+        <h1 class="title3">Get My Updates</h1>
+        <p class="paragraph3">If further any types of query feel free mail to get my updates </p>
+        <div class="gets-update">
+            <div class="gets-update-class">
+                <div class="gets-update-description">
+                    <input type="mail" placeholder="Email">
+                    <button class="colored-subscribe"> Subscribe</button>
+                </div>
+            </div>
+            <footer>
+                <p>Be Humble <br><span>I'm gonna do it</span> </p>
+            </footer>
 </body>
 
 </html>
