--- a/index.html
+++ b/index.html
@@ -107,6 +107,7 @@
             <footer>
                 <p>Be Humble <br><span>I'm gonna do it</span> </p>
             </footer>
+    </section>
 </body>
 
 </html>
