--- a/index.html
+++ b/index.html
@@ -94,6 +94,17 @@
 
         </div>
     </section>
+    <section class="survive-a-flood">
+        <div class="half-width"><img src="images/donation0.jpg" alt=""></div>
+        <div class="half-width">
+            <h1>How to Prepare for and Survive a Flood</h1>
+            <p>Each year, more deaths occur due to flooding than from any other thunderstorm-related hazard.
+                Approximately 75% of all Presidential disaster declarations are associated with flooding.</p>
+            <a class="link-button" target="_blank"
+                href="https://www.almanac.com/content/flood-safety-and-survival-tips#:~:text=If%20you%20have%20to%20walk,force%20and%20power%20of%20water.">Flood
+                Safety Tips</a>
+        </div>
+    </section>
     <section>
         <h1 class="title3">Get My Updates</h1>
         <p class="paragraph3">If further any types of query feel free mail to get my updates </p>
