--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
 </head>
 
 <body>
+    <!---Lets Help Donation--->
+
     <section class="lets-help-donation">
         <div>
             <h1 class="lets-help">Let's Help Those Who Are <br />More In Need</h1>
@@ -26,6 +28,8 @@
                 Now</a>
         </div>
     </section>
+
+    <!---Donate Today--->
     <h1 class="title2">Donate Today</h1>
     <p class="paragraph2">Funded Project Combined with other sources of funding, this project raised enough money to
         fund the outlined activities</p>
@@ -62,10 +66,12 @@
 
         </div>
     </div> <br>
-    <p class="others-amount">Others Amount (Taka)</p>
+    <input class="input-others" type="Text" placeholder="Other Amount (Taka)">
     <br>
     <a class="link-button-second" target="_blank" href="https://assunnahfoundation.org/donate/flood"> Donate
         Now</a>
+
+    <!---Donate Today--->
     <section>
         <h1 class="title3">Our Donate Plan</h1>
         <p class="paragraph3">Our donate plan are designed under three important needs here is below</p>
@@ -94,6 +100,7 @@
 
         </div>
     </section>
+    <!---Survive Flood--->
     <section class="survive-a-flood">
         <div class="half-width"><img src="images/donation0.jpg" alt=""></div>
         <div class="half-width">
@@ -105,14 +112,15 @@
                 Safety Tips</a>
         </div>
     </section>
+    <!---Get My Updates--->
     <section>
         <h1 class="title3">Get My Updates</h1>
         <p class="paragraph3">If further any types of query feel free mail to get my updates </p>
         <div class="gets-update">
             <div class="gets-update-class">
                 <div class="gets-update-description">
-                    <input type="mail" placeholder="Email">
-                    <button class="colored-subscribe"> Subscribe</button>
+                    <input class="input-email" type="mail" placeholder="Email">
+                    <a Class="subscribe-button" href="">Subscribe</a>
                 </div>
             </div>
             <footer>
